# w8

./: .gitignore  README.md  app.py  chatbot.db  main.py  pyproject.toml  requirements.txt
.agents/skills/architecture/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/models/: SKILL.md
.agents/skills/prd/: SKILL.md
.agents/skills/test/: SKILL.md
.claude/: settings.json  settings.local.json
docs/: ARCHITECTURE.md  MANUAL_TEST_CHECKLIST.md  MODELS.md  PRD.md
static/: app.js  style.css
templates/: index.html
