[project]
name = "w8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.73.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
]
